--- a/web/components/GameGrid/GameGrid.module.scss
+++ b/web/components/GameGrid/GameGrid.module.scss
@@ -517,9 +517,11 @@ $mobile-fixed-width: 35px;
 
 .lowerGridHorizontal {
   display: flex;
+  margin-top: 25px;
 }
 
 .fourWeekGridContainerAll {
+  margin-top: 20px;
   width: 20%;
 }
 
