--- a/web/components/GameGrid/utils/FourWeekGrid.module.scss
+++ b/web/components/GameGrid/utils/FourWeekGrid.module.scss
@@ -7,6 +7,7 @@
   overflow-x: auto; // Ensure table is scrollable horizontally on smaller screens
   outline: 10px solid #101010;
   border-radius: 12px;
+  height: 100%;
 }
 
 .fourWeekGridTable {
@@ -19,6 +20,7 @@
   font-size: 14px;
   text-align: left;
   width: 100%;
+  height: 100%;
   max-width: 1000px;
 
   thead {
