--- a/web/components/GameGrid/OpponentMetricsTable.module.scss
+++ b/web/components/GameGrid/OpponentMetricsTable.module.scss
@@ -7,6 +7,7 @@
   overflow-x: auto;
   outline: 10px solid #101010;
   border-radius: 12px;
+  height: 100%;
 }
 
 .table {
@@ -17,8 +18,9 @@
   border-radius: 12px;
   border-spacing: 0;
   font-size: 14px;
-  text-align: left;
+  text-align: center;
   width: 100%;
+  height: 100%;
 }
 
 .table thead {
@@ -30,36 +32,45 @@
 
 .headerLabelRow {
   font-family: "Roboto Condensed", sans-serif;
-  font-size: 16px;
-  font-weight: 900;
+  font-size: 20px;
+  font-weight: 100;
   text-align: center;
   background-color: #101010;
   color: white;
   padding: 10px;
   border-bottom: 4px solid #07aae2 !important;
+  border-right: none !important;
 }
 
-// Override for the header cell that spans all columns.
-.fullWidthHeader {
-  border-right: none !important;
+.spanColorBlue {
+  color: #07aae2;
 }
 
 .table th,
 .table td {
   border: 0.5px solid #505050;
-  text-align: center;
-  font-family: "Roboto Condensed", sans-serif;
   padding: 10px 5px;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
 .table th:first-child,
 .table td:first-child {
   border-right: 5px solid #07aae2;
-  font-size: 16px;
+  border-collapse: collapse;
+  padding: 10px;
 }
 
 .table tr {
   border-radius: 4px;
+  height: 45px;
+}
+
+.table tr th:first-child {
+  border-collapse: collapse;
+  background: #000;
+  text-align: center;
+  font-family: "Roboto Condensed", sans-serif;
+  height: 60px;
 }
 
 .table tr:nth-of-type(even) {
