--- a/web/components/PlayerPickupTable/PlayerPickupTable.module.scss
+++ b/web/components/PlayerPickupTable/PlayerPickupTable.module.scss
@@ -35,11 +35,10 @@
 .filtersTitle {
   width: 100%;
   text-align: center;
-  font-size: 20px;
-  font-weight: 900;
+  font-size: 24px;
+  font-weight: 100;
   color: white;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-style: italic;
+  font-family: "Roboto Condensed", sans-serif;
   letter-spacing: 2px;
 }
 
@@ -59,6 +58,7 @@
 /* Style for the acronym letters */
 .acronym {
   color: #07aae2;
+  font-weight: 900;
 }
 
 .label {
