--- a/web/components/PlayerPickupTable/PlayerPickupTable.module.scss
+++ b/web/components/PlayerPickupTable/PlayerPickupTable.module.scss
@@ -93,7 +93,21 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+}
+
+.statusRightInjuryPart {
+  width: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.injuryNoteRightInjuryPart {
+  width: 75%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 /* 35% for the image container */
